--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,9 @@
   <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
   <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500" rel="stylesheet">
 
+  <link rel="preload" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@6.14.0/css/flag-icons.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="styles.css"></noscript>
+
   <style>
       @font-face {
           font-family: 'Comfortaa';
@@ -246,25 +249,32 @@
       <g clip-path="url(#clip0_718_8504)">
         <path
           class="svg-elem-1"
-          d="M240.67 98.1566L143.085 195.741L107.6 195.741L107.6 160.256L205.184 62.6715L240.67 62.6715L240.67 98.1566Z" fill="#4949DE"></path>
+          d="M240.67 98.1566L143.085 195.741L107.6 195.741L107.6 160.256L205.184 62.6715L240.67 62.6715L240.67 98.1566Z"
+          fill="#4949DE"></path>
         <path
           class="svg-elem-2"
-          d="M196.242 53.8725L36.5584 213.556L18.8159 195.813L18.8159 160.328L160.757 18.3873L196.242 18.3873L196.242 36.1299L196.242 53.8725Z" fill="#4949DE"></path>
+          d="M196.242 53.8725L36.5584 213.556L18.8159 195.813L18.8159 160.328L160.757 18.3873L196.242 18.3873L196.242 36.1299L196.242 53.8725Z"
+          fill="#4949DE"></path>
         <path
           class="svg-elem-3"
-          d="M240.672 62.6713L338.028 160.381L338.028 195.512L302.543 195.512L205.187 99.6505L205.187 62.6713L240.672 62.6713Z" fill="#4949DE"></path>
+          d="M240.672 62.6713L338.028 160.381L338.028 195.512L302.543 195.512L205.187 99.6505L205.187 62.6713L240.672 62.6713Z"
+          fill="#4949DE"></path>
         <path
           class="svg-elem-4"
-          d="M338.257 195.743L276.158 257.842L240.673 257.842L240.673 222.356L302.772 160.257L338.257 160.257L338.257 195.743Z" fill="#4949DE"></path>
+          d="M338.257 195.743L276.158 257.842L240.673 257.842L240.673 222.356L302.772 160.257L338.257 160.257L338.257 195.743Z"
+          fill="#4949DE"></path>
         <path class="svg-elem-5"
-              d="M196.314 142.513L276.156 222.355L276.156 257.84L239.923 257.84L160.829 177.998L196.314 142.513Z" fill="#4949DE"></path>
+              d="M196.314 142.513L276.156 222.355L276.156 257.84L239.923 257.84L160.829 177.998L196.314 142.513Z"
+              fill="#4949DE"></path>
         <path
           class="svg-elem-6"
-          d="M160.828 337.675L18.887 195.735L18.8871 160.25L54.3722 160.25L196.313 302.19L196.313 337.675L160.828 337.675Z" fill="#4949DE"></path>
+          d="M160.828 337.675L18.887 195.735L18.8871 160.25L54.3722 160.25L196.313 302.19L196.313 337.675L160.828 337.675Z"
+          fill="#4949DE"></path>
       </g>
     </g>
     <defs>
-      <filter color-interpolation-filters="sRGB" filterUnits="userSpaceOnUse" height="597" id="filter0_b_718_8504" width="597" x="-120.5"
+      <filter color-interpolation-filters="sRGB" filterUnits="userSpaceOnUse" height="597" id="filter0_b_718_8504"
+              width="597" x="-120.5"
               y="-120.5">
         <feFlood flood-opacity="0" result="BackgroundImageFix"></feFlood>
         <feGaussianBlur in="BackgroundImageFix" stdDeviation="60.25"></feGaussianBlur>
@@ -280,10 +290,6 @@
 
 <app-root></app-root>
 </body>
-<link
-  href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@6.14.0/css/flag-icons.min.css"
-  rel="stylesheet"
-/>
 
 <script>
     try {
