--- a/src/index.html
+++ b/src/index.html
@@ -24,13 +24,13 @@
   <link href="https://fonts.gstatic.com" rel="preconnect">
   <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
 
-  <style>
-    @font-face {
-      font-family: 'Comfortaa';
-      src: url('assets/fonts/Comfortaa/Comfortaa.ttf') format('opentype');
-      font-display: swap;
-    }
-  </style>
+<!--  <style>-->
+<!--    @font-face {-->
+<!--      font-family: 'Comfortaa';-->
+<!--      src: url('assets/fonts/Comfortaa/Comfortaa.ttf') format('opentype');-->
+<!--      font-display: swap;-->
+<!--    }-->
+<!--  </style>-->
   <link
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     rel="stylesheet">
